# flo

./: .env.example  .gitignore  Makefile  README.md  flo.db-shm  flo.db-wal  pyproject.toml
.squad/: .first-run  config.json  decisions.md  routing.md  team.md
.squad/agents/ash/: charter.md  history.md
.squad/agents/dallas/: charter.md  history.md
.squad/agents/lambert/: charter.md  history.md
.squad/agents/ripley/: charter.md  history.md
.squad/agents/scribe/: charter.md  history.md
.squad/casting/: history.json  registry.json
.squad/identity/: now.md  wisdom.md
docs/: tools.md
src/flo/: __init__.py  config.py  log.py
src/flo/agent/: __init__.py  graph.py  nodes.py  state.py
src/flo/integrations/: __init__.py
src/flo/llm/: __init__.py  models.py  router.py
src/flo/server/: __init__.py  app.py  models.py  persistence.py  routes.py
src/flo/tools/: __init__.py  base.py
src/flo/tools/calendar/: __init__.py  tools.py
src/flo/tools/gmail/: __init__.py  tools.py
src/flo/tools/search/: __init__.py  tools.py
tests/: conftest.py  test_agent.py  test_llm_router.py  test_server.py  test_smoke.py  test_tools.py
tests/manual/: test_integration.py
